--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 </head>
 <body>
     <div class="content">
+        <p style="font-size: 6em; color: #a3a300;"><b>Vajra</b> Defence</p>
+
         <h1>We're fortifying our website!</h1>
 
         <h2>Until it's battle-ready, direct any queries to contact@vajradefence.com</h2>
