--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="content">
-        <p style="font-size: 6em; color: #a3a300;"><b>Vajra</b> Defence</p>
+        <p style="font-size: 6em; color: #a3a300;"><b>VAJRA</b> DEFENCE</p>
 
         <h1>We're fortifying our website!</h1>
 
